<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="
		http://maven.apache.org/POM/4.0.0
		https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.oxerr</groupId>
		<artifactId>oxerr-parent</artifactId>
		<version>1.6.3</version>
	</parent>
	<groupId>org.oxerr.viagogo</groupId>
	<artifactId>gogokit</artifactId>
	<name>GogoKit</name>
	<description>GogoKit - viagogo API Client Library for Java.</description>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<url>https://www.oxerr.org/gogokit</url>
	<inceptionYear>2023</inceptionYear>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<ticket-inventory-support.version>0.0.1</ticket-inventory-support.version>
	</properties>
	<modules>
		<module>gogokit-model</module>
		<module>gogokit-client</module>
		<module>gogokit-client-cached</module>
		<module>gogokit-client-cached-redisson</module>
		<module>gogokit-client-rescu</module>
		<module>gogokit-client-delist</module>
		<module>gogokit-coverage</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<additionalOptions>-package</additionalOptions>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.ws.rs</groupId>
				<artifactId>jakarta.ws.rs-api</artifactId>
				<version>2.1.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.12.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>2.20.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>2.20.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j2-impl</artifactId>
				<version>2.20.0</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>5.9.3</version>
			</dependency>
			<dependency>
				<groupId>org.oxerr.rescu</groupId>
				<artifactId>rescu-ext-singleton</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.oxerr.ticket.inventory.support</groupId>
				<artifactId>ticket-inventory-support-cached</artifactId>
				<version>${ticket-inventory-support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.oxerr.ticket.inventory.support</groupId>
				<artifactId>ticket-inventory-support-cached-redisson</artifactId>
				<version>${ticket-inventory-support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.redisson</groupId>
				<artifactId>redisson</artifactId>
				<version>3.19.3</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>2.0.7</version>
			</dependency>
			<dependency>
				<groupId>com.evanlennick</groupId>
				<artifactId>retry4j</artifactId>
				<version>0.15.0</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.14.3</version>
			</dependency>

			<!-- Java 8 Date/time -->
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>2.14.3</version>
			</dependency>

			<dependency>
				<groupId>com.github.mmazi</groupId>
				<artifactId>rescu</artifactId>
				<version>2.1.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>io.openapitools.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-hal</artifactId>
				<version>1.0.9</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<scm>
		<connection>scm:git:git@github.com:sutra/gogokit.java.git</connection>
		<developerConnection>scm:git:git@github.com:sutra/gogokit.java.git</developerConnection>
		<url>https://github.com/sutra/gogokit.java/tree/master</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/sutra/gogokit.java/issues</url>
	</issueManagement>
</project>
